Improved ordered + unordered list block parsing
 - Fixed a few more markdown tests cases
 - Improved nested + mixed list parsing

--- a/markdown4j/src/test/resources/markdown4j/tests/github/lists.html
+++ b/markdown4j/src/test/resources/markdown4j/tests/github/lists.html
@@ -12,8 +12,7 @@
 <p>Alternatively,</p>
 <ul>
 <li>Dashes work just as well</li>
-<li>And if you have sub points, put two spaces before the dash or star:
-<ul>
+<li>And if you have sub points, put two spaces before the dash or star:<ul>
 <li>Like this</li>
 <li>And this</li>
 </ul>
