Updated test resources to expect html entities

--- a/markdown4j/src/test/resources/txtmark/MarkdownTest/Markdown Documentation - Basics.html
+++ b/markdown4j/src/test/resources/txtmark/MarkdownTest/Markdown Documentation - Basics.html
@@ -21,13 +21,13 @@ can <a href="/projects/markdown/basics.text">see the source for it by adding '.t
 <h2>Paragraphs, Headers, Blockquotes</h2>
 <p>A paragraph is simply one or more consecutive lines of text, separated
 by one or more blank lines. (A blank line is any line that looks like a
-blank line -- a line containing nothing spaces or tabs is considered
+blank line &ndash; a line containing nothing spaces or tabs is considered
 blank.) Normal paragraphs should not be intended with spaces or tabs.</p>
 <p>Markdown offers two styles of headers: <em>Setext</em> and <em>atx</em>.
 Setext-style headers for <code>&lt;h1&gt;</code> and <code>&lt;h2&gt;</code> are created by
-"underlining" with equal signs (<code>=</code>) and hyphens (<code>-</code>), respectively.
+&ldquo;underlining&rdquo; with equal signs (<code>=</code>) and hyphens (<code>-</code>), respectively.
 To create an atx-style header, you put 1-6 hash marks (<code>#</code>) at the
-beginning of the line -- the number of hashes equals the resulting
+beginning of the line &ndash; the number of hashes equals the resulting
 HTML header level.</p>
 <p>Blockquotes are indicated using email-style '<code>&gt;</code>' angle brackets.</p>
 <p>Markdown:</p>
