Updated test cases to match expected behavior

--- a/markdown/src/test/resources/net.dgardiner.markdown/github/headers-and-quotes.html
+++ b/markdown/src/test/resources/net.dgardiner.markdown/github/headers-and-quotes.html
@@ -6,10 +6,10 @@
 
 <p>You can use  one <code>#</code> all the way up to <code>######</code> six for different heading sizes.</p>
 
-<p>If you'd like to quote someone, use the > character before the line:</p>
+<p>If you'd like to quote someone, use the &gt; character before the line:</p>
 
 <blockquote>
-    <p>Coffee. The finest organic suspension ever devised&hellip; I beat the Borg with it.</p>
+    <p>Coffee. The finest organic suspension ever devised... I beat the Borg with it.</p>
 
     <ul>
         <li>Captain Janeway</li>
