--- a/markdown/src/test/resources/net.dgardiner.markdown/github/files/README.html
+++ b/markdown/src/test/resources/net.dgardiner.markdown/github/files/README.html
@@ -1,4 +1,4 @@
-<p><img src="http://i.imgur.com/EDDSxZK.jpg" alt="MarkdownView screenshot" />
+<p><img src="http://i.imgur.com/EDDSxZK.jpg" alt="MarkdownView screenshot" /><br>
 <a href="https://bintray.com/falnatsheh/maven/MarkdownView/_latestVersion"><img src="https://api.bintray.com/packages/falnatsheh/maven/MarkdownView/images/download.svg" alt="Download" /></a></p>
 
 <h2>About</h2>
@@ -19,7 +19,7 @@
 </code></pre>
 <h2>Usage</h2>
 
-<p>Add MarkdownView to your layout: </p>
+<p>Add MarkdownView to your layout:</p>
 
 <pre><code class="xml">    &lt;us.feras.mdv.MarkdownView
         android:layout_width="match_parent"
@@ -27,13 +27,13 @@
         android:id="@+id/markdownView" /&gt;
 </code></pre>
 
-<p>and reference it in your Activity/Fragment:<br></p>
+<p>and reference it in your Activity/Fragment:</p>
 
 <pre><code class="java">MarkdownView markdownView = (MarkdownView) findViewById(R.id.markdownView);
 markdownView.loadMarkdown("## Hello Markdown");
 </code></pre>
 
-<p><strong>Note</strong>:
+<p><strong>Note</strong>:<br>
 You could also create the view by code. Below an example of how to set the whole activity to be a MarkdownView by Adding the following to your onCreate method:</p>
 
 <pre><code class="java">  MarkdownView markdownView = new MarkdownView(this);
@@ -42,12 +42,12 @@ You could also create the view by code. Below an example of how to set the whole
 </code></pre>
 <h2>Screenshots</h2>
 
-<p><img src="http://i.imgur.com/gY8eXaj.jpg" width="300">
+<p><img src="http://i.imgur.com/gY8eXaj.jpg" width="300"><br>
 <img src="http://i.imgur.com/ETHYbCv.jpg" width="300"></p>
 
 <h2>Demo App and Code Sample</h2>
 
-<p>The above screenshots taking from the demo app which could be found here. The demo app include code to demonstrate: </p>
+<p>The above screenshots taking from the demo app which could be found here. The demo app include code to demonstrate:</p>
 
 <ul>
     <li>Loading Local Markdown File. </li>
@@ -60,24 +60,24 @@ You could also create the view by code. Below an example of how to set the whole
 <h2>Loading Markdown text or file:</h2>
 
 <ul>
-    <li><p><code>loadMarkdown(String text)</code>:
-        Using this method will result in loading md string to the MarkdownView and displaying it as HTML. </p></li>
-    <li><p><code>loadMarkdownFile(String url)</code>:
-        You can use this method to load local or online files. </p></li>
+    <li><p><code>loadMarkdown(String text)</code>:<br>
+        Using this method will result in loading md string to the MarkdownView and displaying it as HTML.</p></li>
+    <li><p><code>loadMarkdownFile(String url)</code>:<br>
+        You can use this method to load local or online files.</p></li>
 </ul>
 
-<p>To load a local file, you have to add it to your assets folder and pass a url that start with &ldquo;file:///android_asset/&rdquo; : </p>
+<p>To load a local file, you have to add it to your assets folder and pass a url that start with "file:///android_asset/":</p>
 
 <pre><code class="java">markdownView.loadMarkdownFile("file:///android_asset/myFile.md");
 </code></pre>
 
-<p>To load a remote file you need to pass the full url :  <br></p>
+<p>To load a remote file you need to pass the full url:</p>
 
 <pre><code class="java">markdownView.loadMarkdownFile("http://www.my-site.com/myFile.md");
 </code></pre>
 <h2>Theming</h2>
 
-<p>You could apply custom CSS to the MarkdownView. Example: </p>
+<p>You could apply custom CSS to the MarkdownView. Example:</p>
 
 <pre><code class="java">markdownView.loadMarkdownFile("file:///android_asset/hello.md","file:///android_asset/MyCustomTheme.css");
 </code></pre>
@@ -97,7 +97,7 @@ You could also create the view by code. Below an example of how to set the whole
         <ul>
             <li>Convert to Gradle Project (Avillable now on <a href="https://bintray.com/falnatsheh/maven/MarkdownView/view">jCenter</a>). </li>
             <li>Fix CSS Issue (Thanks <a href="https://github.com/swanson">@swanson</a> &amp; <a href="https://github.com/echodjb">@echodjb</a>). </li>
-            <li>Update demo app.<br></li>
+            <li>Update demo app.</li>
         </ul></li>
 </ul>
 
